# Flopa

./: .gitignore  CMakeLists.txt  Flopa.sln  LICENSE  README.md  Virs.sln
Flopa/: Flopa.cpp  Flopa.vcxproj  Flopa.vcxproj.filters  additional.cpp  additional.hpp  effect.cpp  killer.cpp
Release/: Flopa.exe.idb  Readme.txt  Thumbs.db
Source/: Additional.cpp  Misc.cpp  Virs.cpp  VirsHad.hpp
UACSetuper/: Resource.rc  UACSetuper.cpp  UACSetuper.vcxproj  UACSetuper.vcxproj.filters
Virs/: Aditionals.cpp  Admin.cpp  BSOD.cpp  Download.cpp  Effect.cpp  Icons.cpp  Invers.cpp  Killer.cpp  MBR.cpp  Melt.cpp  Misc.cpp  Resource.rc  Scuaer.cpp  TextO.cpp  Virs.cpp  Virs.vcxproj  Virs.vcxproj.filters  VirsHad.h  VirsHad.hpp  XOR.cpp  resource.h
src/: additional.cpp  additional.hpp  effect.cpp  effect.hpp  killer.cpp  killer.hpp  main.cpp  misc.cpp  misc.hpp
